[gd_scene load_steps=2 format=3 uid="uid://d1jufgvqkpw2k"]

[ext_resource type="Script" path="res://map/ua_structures/unit.gd" id="1_n5jky"]

[node name="Unit" type="Sprite2D"]
script = ExtResource("1_n5jky")

[node name="Button" type="Button" parent="."]
show_behind_parent = true
offset_right = 8.0
offset_bottom = 8.0
mouse_default_cursor_shape = 2

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
